manifests/cvpageweb-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cvpageweb
  labels:
    app: cvpage
spec:
  template:
    metadata:
      labels:
        app: cvpage
        tier: web
    spec:
      containers:
      - name: cvpage-app
        image: gcr.io/cv-page-206506/cvpage:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: tls
            mountPath: /etc/tls
            readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: yourdomain-tls
