manifests/cvpageweb-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cvpageweb
  labels:
    app: cvpage
  annotations:
    kubernetes.io/ingress.allow-http: "false" # disable HTTP
spec:
  tls:
    - secretName: yourdomain-tls
  backend:
    serviceName: cvpageweb-backend
    servicePort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: cvpageweb-backend
  labels:
    app: cvpage
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"cvpageweb-tls":"HTTP2"}'
spec:
  type: NodePort
  selector:
    app: cvpage
    tier: web
  ports:
  - name: cvpageweb-tls # port name must match the value in the annotation
    port: 443
    targetPort: 8443
